# job-finder

./: .gitignore  .gitmodules  AGENT_BRIDGE.md  BRIEF.md  Caddyfile  INSIGHTS.md  LLAMA_CONTEXT.md  LLAMA_MEMORY.md  PLANNER_CONTEXT.md  PLANNER_MEMORY.md  PLAYBOOK.md  README.md  SCRAPERS.md  SCRAPER_REPOS.md  SLACK_COLLABORATION.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260309_0001_create_jobs_and_cover_letters.py  20260309_0002_add_search_vector_trigger.py  20260322_0003_create_company_snapshots.py  20260322_0004_add_slack_notification_tracking.py  20260323_0005_add_job_scoring_metadata.py  20260323_0006_add_research_and_job_chat.py  20260323_0007_add_job_slack_channels.py  20260324_0008_add_plan_tasks.py  20260324_0009_add_plan_task_slack_threads.py
backend/app/: config.py  database.py
backend/app/agent_bridge/: __init__.py  (+11 more)
backend/scripts/: agent_night_shift.py  rescore_jobs.py  slack_agent_bridge.py
backend/tests/: test_agent_bridge.py  test_airtable.py  test_alerts_router.py  test_companies_router.py  test_company_sync.py  test_cover_letter.py  test_djinni_external_mode.py  test_external_djinni_adapter.py  test_extractor.py  test_goal_memory.py  test_health.py  test_ingest.py  test_jobs_router.py  test_market.py  test_overnight_loop.py  test_planner_memory.py  test_plans_router.py  test_profile.py  test_router.py  test_scheduler.py  test_scorer.py  test_scrapers.py  test_search.py  test_slack.py  test_specialist_memory.py
(+92 files in other folders)
