[project]
name = "cis-backend"
version = "0.1.0"
description = "Career Intelligence System backend"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "apscheduler>=3.10.4",
  "playwright>=1.48.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "httpx>=0.28.0",
  "beautifulsoup4>=4.12.3",
  "python-dotenv>=1.0.1",
  "apify-client>=2.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
